# RFC_hw

./: README.md  pyproject.toml
docs/: architecture_questions.md  asr.md  requirements.md  risks.md
docs/diagrams/c4/: solution_1.puml  solution_2.puml
docs/diagrams/sequence/: failover_delivery.puml  main_delivery.puml
docs/rfc/: guaranteed_delivery_rfc.md
src/notification_platform/models/: entities.py
src/notification_platform/providers/: email.py  push.py  sms.py
src/notification_platform/services/: delivery.py
tests/: test_delivery.py
