[tool.poetry]
name = "notification-platform-hw4"
version = "0.1.0"
description = "Homework 4: Notification Platform architecture and RFC"
authors = ["Your Name"]
readme = "README.md"
packages = [{ include = "notification_platform", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
